Har lagt till några av menyerna - inget klart!

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,19 @@ body {
   position: relative;
 }
 
+#overlay {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.2588235294);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 300ms;
+}
+#overlay.show {
+  opacity: 1;
+  pointer-events: all;
+}
+
 #to-the-top {
   width: 2rem;
   height: 2rem;
@@ -70,17 +83,35 @@ body {
     font-size: 0.8rem;
     margin-bottom: 1.5rem;
   }
+  .footer {
+    padding-top: 2rem;
+    padding-bottom: 4rem;
+    padding-inline: 1rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
+  }
+  #blob-right {
+    width: 16vw;
+  }
+  #blob-left {
+    width: 16vw;
+  }
 }
 @media (min-width: 1400px) {
   .menu {
     padding-inline: 16rem;
     padding-top: 2rem;
+    position: relative;
   }
   #mobil-menu {
     display: none;
   }
   #desktop-menu {
     display: block;
+  }
+  #desktop-menu #search-box {
+    outline: none;
   }
   #desktop-menu #logotype-and-search {
     display: flex;
@@ -126,6 +157,45 @@ body {
   #logotype-desktop {
     width: 20vw;
   }
+  .togglemenu-design {
+    padding-inline: 16rem;
+    padding-block: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    position: absolute;
+    z-index: 1;
+    width: 100vw;
+    height: 40rem;
+    left: 0;
+    background-color: transparent;
+    opacity: 1;
+    transition: opacity 100ms ease-in-out;
+  }
+  .hide {
+    opacity: 0;
+    z-index: -1 !important;
+  }
+  .background {
+    opacity: 1;
+    background-color: #F6F5F4;
+    position: absolute;
+    z-index: 1;
+    width: 100vw;
+    height: 40rem;
+    left: 0;
+  }
+  .togglemenu-content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+  }
+  .togglemenu-content a {
+    color: #2D2D2B;
+    text-decoration: none;
+  }
+  .togglemenu-content a:hover {
+    text-decoration: underline;
+  }
   .boxes {
     padding-inline: 16rem;
     display: grid;
@@ -165,6 +235,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column: 1fr;
+    padding-block: 2rem;
   }
 }
 .main .image-container {
@@ -270,19 +341,24 @@ body {
 
 .green-wave {
   width: 100vw;
+  height: 5vw;
+  margin-block: 0;
+  padding-block: 0;
+  position: relative;
+  border: none;
 }
 .green-wave #green-wave {
   width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 .footer {
   position: relative;
   background-color: #006858;
   color: white;
-  padding-block: 2rem;
-}
-.footer p {
-  margin: 0.2rem;
+  border: none p;
+  border-margin-bottom: 1rem;
 }
 .footer ul {
   margin: 0;
